--- a/2020_Python_Programming_Practical_1.ipynb
+++ b/2020_Python_Programming_Practical_1.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "2020 Python Programming Practical 1.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -14,16 +13,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/tartyao/2020python/blob/master/2020_Python_Programming_Practical_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -69,13 +58,29 @@
       "metadata": {
         "id": "D0uTR7B-8qbF",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "f1d7c249-6366-4559-df64-cb9f63556666"
       },
       "source": [
-        ""
+        "fahrenheit = float(input(\"Enter the temperature in Fahrenheit: \"))\n",
+        "celsius = (5/9) * (fahrenheit - 32)\n",
+        "output = round(celsius,2)\n",
+        "print(\"The temperature in celsius is\" , output)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter the temperature in Fahrenheit: 76\n",
+            "The temperature in celsius is 24.44\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
